more design sampling

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,13 +14,13 @@
 	<div class="footer">
 		<ul>
 			<li>
-				<a href="library.html"><img src="assets/latest-colors.png" alt=""></a>
+				<a href="services.html"><img src="assets/latest-colors.png" alt=""></a>
 			</li>
 			<li>
 				<a href="gallery.html"><img src="assets/inspiration.png" alt=""></a>
 			</li>
 			<li>
-				<a href="contact.html"><img src="assets/color-expert.png" alt=""></a>
+				<a href="contact_us.html"><img src="assets/color-expert.png" alt=""></a>
 			</li>
 		</ul>
 	</div>
