--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,52 +13,15 @@
 					<a href="gallery.html">gallery</a>
 				</li>
 				<li>
-					<a href="blog.html">blog</a>
+					<a href="services.html">blog</a>
 				</li>
 				<li>
-					<a href="about.html">about us</a>
+					<a href="about_us.html">about us</a>
 				</li>
 				<li>
-					<a href="contact.html">contact us</a>
+					<a href="contact_us.html">contact us</a>
 				</li>
 			</ul>
 		</div>
 	</span>
-
 </div>
-
-<script type="text/javascript">
-$(document).ready(function(){
-    var speed = 400;
-    var menu = $('div#main_navigation');
-    var offset = menu.offset().top;
-    var menuStartPos = menu.position().top;
-    if($.browser.name == 'firefox'){
-    	var top_offset = -32;
-    }else{
-    	var top_offset = -79;
-    }
-        
-    updateFloatingMenu(); 
-
-$(window).scroll(function(){
-    updateFloatingMenu();
-});
-
-
-function updateFloatingMenu(){
-    var scrollAmount = $(document).scrollTop();
-    var newPosition = menuStartPos + scrollAmount;
-
-    if(scrollAmount > offset){
-        var topPos = (newPosition-offset) + top_offset;
-        menu.stop().animate({top: topPos}, speed);
-    }else{
-        menu.stop().animate({top: menuStartPos}, speed);
-    }
-};
-
-});
-
-
-</script>
