--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,10 @@
 <div id="body">
 	<div class="header">
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+
 		<img src="assets/colors.jpg" alt="">
 	</div>
 	<div class="body">
@@ -17,7 +22,7 @@
 				<a href="services.html"><img src="assets/latest-colors.png" alt=""></a>
 			</li>
 			<li>
-				<a href="gallery.html"><img src="assets/inspiration.png" alt=""></a>
+				<a href="gallery.html"><img src="assets/inspiration.jpg" alt=""></a>
 			</li>
 			<li>
 				<a href="contact_us.html"><img src="assets/color-expert.png" alt=""></a>
