--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,8 @@
 <div id="header" >
+	<div id="header_wrapper">
 	<span><a href="index.html" class="logo"><img src="assets/logo.png" alt=""></a></span>
 	<span class="wrapper">
-		<div style="width:990px" id="main_navigation" class="floating_nav">
+		<div  id="main_navigation" class="floating_nav">
 			<ul>
 				<li class="selected">
 					<a href="index.html">home</a>
@@ -24,4 +25,5 @@
 			</ul>
 		</div>
 	</span>
+	</div>
 </div>
