--- a/app/views/home/gallery.html.erb
+++ b/app/views/home/gallery.html.erb
@@ -1,5 +1,5 @@
 <div id="body">
-		<h2>Gallery</h2>
+		<h1 style="text-align:center;padding-top:60px;padding-bottom:15px">Gallery</h2>
 		<div class="content">
 			<ul class="gallery">
 				<li>
@@ -24,7 +24,7 @@
 					<a href="#"><img src="assets/home-office.jpg" alt=""><span>home office</span></a>
 				</li>
 				<li>
-					<a href="#"><img src="assets/dining-room.jpg" alt=""><span>dining room</span></a>
+					<a href="#"><img src="assets/kitchen.jpg" alt=""><span>dining room</span></a>
 				</li>
 				<li>
 					<a href="#"><img src="assets/lounge.jpg" alt=""><span>lounge</span></a>
