--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,32 +1,34 @@
-<div id="body">
-	<div class="header">
-		<br/>
-		<br/>
-		<br/>
-		<br/>
+<div class="header">
+	<br/>
+	<br/>
+	<br/>
+	<br/>
 
-		<img src="assets/colors.jpg" alt="">
-	</div>
-	<div class="body">
-		<h1>Colors to life</h1>
-		<p>
-			This website template has been designed by <a href="http://www.freewebsitetemplates.com">Free Website Templates</a> for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">forums</a>.
-		</p>
-		<p>
-			This website template has been designed by <a href="http://www.freewebsitetemplates.com">Free Website Templates</a> for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">forums</a>.
-		</p>
-	</div>
-	<div class="footer">
-		<ul>
-			<li>
-				<a href="services.html"><img src="assets/latest-colors.png" alt=""></a>
-			</li>
-			<li>
-				<a href="gallery.html"><img src="assets/inspiration.jpg" alt=""></a>
-			</li>
-			<li>
-				<a href="contact_us.html"><img src="assets/color-expert.png" alt=""></a>
-			</li>
-		</ul>
-	</div>
+	<img src="assets/colors.jpg" alt="" width="930px" height="405px">
+</div>
+<div class="body">
+	<h1 style="padding-left:30px; padding-bottom:15px">From renovations to new builds ...</h1>
+	<p>
+		MyDesign is an Architectural services focused company, providing architectural designs, plans, models, and any related project managemnt services for any size of construction job.
+
+		Weather you have an idea of what you would like to do with the space you have or need some inspiration. We have the minds for the job. People who love what they do and are ready to work with you at every step of the process from idea to conceptual design, planning approval and all the way up to final working and building drawings for construction.
+
+		We can even take it a step further and help you manage and supervise the building work, making sure that it's built right the first time.
+	</p>
+	<p>
+
+	</p>
+</div>
+<div class="footer">
+	<ul>
+		<li>
+			<a href="/services"><img src="assets/latest-colors.png" alt=""></a>
+		</li>
+		<li>
+			<a href="/gallery"><img src="assets/inspiration.jpg" alt=""></a>
+		</li>
+		<li>
+			<a href="/contact_us"><img src="assets/color-expert.png" alt=""></a>
+		</li>
+	</ul>
 </div>
