--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,16 +2,16 @@
 	<div>
 		<ul class="contact">
 			<li>
-				Paint Republic
+				My Design Co Ltd
 			</li>
 			<li>
-				250 Lorem Ipsum Street
+				5 Warren Court, Elgin Road
 			</li>
 			<li>
-				Joafanr, Caknan 109935
+				Weybridge, Surrey
 			</li>
 			<li>
-				Kiangab
+				KT13 8ST
 			</li>
 		</ul>
 		<ul class="connect">
@@ -22,7 +22,7 @@
 				<a href="http://www.freewebsitetemplates.com/misc/contact">mail</a>
 			</li>
 			<li class="facebook">
-				<a href="http://freewebsitetemplates.com/go/facebook/">facebook</a>
+				<a href="https://www.facebook.com/pages/My-Design/403364599753236?ref=ts&fref=ts">facebook</a>
 			</li>
 			<li class="twitter">
 				<a href="http://freewebsitetemplates.com/go/twitter/">twitter</a>
