--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,26 +1,26 @@
 <div id="header" >
 	<div id="header_wrapper">
-	<span><a href="index.html" class="logo"><img src="assets/logo.png" alt=""></a></span>
+	<span><a href="/" class="logo"><img src="assets/logo.png" alt=""></a></span>
 	<span class="wrapper">
 		<div  id="main_navigation" class="floating_nav">
 			<ul>
 				<li class="selected">
-					<a href="index.html">home</a>
+					<a href="/">home</a>
 				</li>
 				<li>
-					<a href="library.html">color library</a>
+					<a href="/gallery">gallery</a>
 				</li>
 				<li>
-					<a href="gallery.html">gallery</a>
+					<a href="/services">services</a>
 				</li>
 				<li>
-					<a href="services.html">blog</a>
+					<a href="/faq">FAQ</a>
 				</li>
 				<li>
-					<a href="about_us.html">about us</a>
+					<a href="/about_us">about us</a>
 				</li>
 				<li>
-					<a href="contact_us.html">contact us</a>
+					<a href="/contact_us">contact us</a>
 				</li>
 			</ul>
 		</div>
