--- a/app/views/home/services.html.erb
+++ b/app/views/home/services.html.erb
@@ -1,2 +1,55 @@
-<h1>Services Page</h1>
+<h1 style="text-align:center;padding-top:50px;padding-bottom:15px">Services Page</h1>
+<div class="content">
+<h2>Planning Application</h2>
+<ul>
+  <li>Prepare and carry out a full measured survey.</li>
+  <li>Deal with Local Authorities for further relevant information.</li>
+  <li>Design advice consultation.</li>
+  <li>Prepare Visualization sketches.</li>
+  <li>Preapre Design access statement.</li>
+  <li>Amend drawings untill approval from Authorities.</li>
+</ul>
 
+<h2>What's included when you choose us:</h2>
+<p>
+  For this service we can prepare and carry out a full measured survey and search
+  with the Local Authority for further relevant information. We offer design advice
+  consultation and visualization sketches prior for plans being drawn for submission.
+  We will prepare the proposed drawing related plans by sending the first draft to
+  the client for approval before finalizing the layout, so that any minor changes
+  can be incorporated in the drawings before issuing to the Local Authority.
+  We then prepare all the necessary planning application forms and submit them to
+  the Local Authority on your behalf. We can also produce a "Design access statement"
+  if it is required. We will monitor your application and liaise with the Local
+  Authority till the end of your application being successful. Any drawing amendments
+  required by the Local Authority during the application process will be done as
+  this is included in our fees. We will liaise with the client if any amendments
+  from the Local Authority to be incorporated prior to re-submission.
+</p>
+
+<h2>Building Regulation Application</h2>
+  <p>
+    Building Regulations are required prior to commencement of construction once
+    planning permission has been granted. We can prepare full Building Regulation
+    drawings showing details according to the Building Regulation Act and British
+    Standards, this is to ensure the health and safety for people in or around the
+    buildings. These drawings may also cover areas like fire escapes, energy conservations
+    and access to and about buildings.
+  </p>
+
+<h2>Structural Engineer requirements</h2>
+  <p>
+    We can also fulfil your need of a Structural Engineer. We have our approved and
+    highly experienced Structural Engineer who can provide all the structural
+    calculations and related drawings for your project.
+    Outsourcing
+    If you are a practice looking for additional support please contact us with any enquiries.
+  </p> 
+
+<h2>Fees</h2>
+  <p>
+    Our services are tailored to your specific needs of the project at hand. We will
+    provide you with a fully tailored quotation which relates to that specific
+    project's requirements. Our prices are competitive and free consultation.
+  </p>
+</div>
