moved styling to external style sheet

--- a/app/views/home/gallery.html.erb
+++ b/app/views/home/gallery.html.erb
@@ -1,5 +1,5 @@
 <div id="body">
-		<h1 style="text-align:center;padding-top:50px;padding-bottom:15px">Gallery</h2>
+		<h1 class="page_heading">Gallery</h2>
 		<div class="content">
 			<ul class="gallery">
 				<li>
