--- a/app/views/home/services.html.erb
+++ b/app/views/home/services.html.erb
@@ -1,4 +1,4 @@
-<h1 style="text-align:center;padding-top:50px;padding-bottom:15px">Services Page</h1>
+<h1 class="page_heading" >Services Page</h1>
 <div class="content">
 <h2>Planning Application</h2>
 <ul>
