--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -95,6 +95,10 @@ body {
 	padding: 0;
 	width: 960px;
 }
+
+.page_heading{ text-align:center;padding-top:50px;padding-bottom:15px }
+
+
 #body .body {
 	padding: 40px 0 0;
 }
