--- a/app/views/home/gallery.html.erb
+++ b/app/views/home/gallery.html.erb
@@ -1,34 +1,68 @@
 <div id="body">
 		<h1 class="page_heading">Gallery</h2>
-		<div class="content">
+		<div class="content" style="text-align:center">
 			<ul class="gallery">
 				<li>
-					<a href="#"><img src="assets/deco-styles.jpg" alt=""><span>deco styles</span></a>
+					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+            <img src="assets/1_before.jpg" alt="" height="134" width="194">
+            <span>Example 1 - Before</span>
+          </a>
 				</li>
 				<li>
-					<a href="#"><img src="assets/girls-bedroom.jpg" alt=""><span>girl's bedroom</span></a>
+					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+            <img src="assets/1_drawing.jpg" alt="" class="gallery-thumbs">
+            <span>Example 1 - Plans</span>
+          </a>
 				</li>
 				<li>
-					<a href="#"><img src="assets/entertainment-room.jpg" alt=""><span>entertainment room</span></a>
+					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+            <img src="assets/1_after.jpg" alt="" class="gallery-thumbs">
+            <span>Example 1 - After</span>
+          </a>
 				</li>
 				<li>
-					<a href="#"><img src="assets/living-room.jpg" alt=""><span>living room</span></a>
+					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+            <img src="assets/2_before.jpg" alt=""  class="gallery-thumbs">
+            <span>Example 2 - Before</span>
+          </a>
 				</li>
 				<li>
-					<a href="#"><img src="assets/masters-bedroom.jpg" alt=""><span>master's bedroom</span></a>
+					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+            <img src="assets/2_drawing.jpg" alt=""  class="gallery-thumbs">
+            <span>Example 2 - Plans</span>
+          </a>
 				</li>
 				<li>
-					<a href="#"><img src="assets/kitchen.jpg" alt=""><span>kitchen</span></a>
+					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+            <img src="assets/2_after.jpg" alt="" class="gallery-thumbs" >
+            <span>Example 2 - After</span>
+          </a>
 				</li>
 				<li>
-					<a href="#"><img src="assets/home-office.jpg" alt=""><span>home office</span></a>
+					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+            <img src="assets/2_kitchen.jpg" alt="" class="gallery-thumbs">
+            <span>Example 2 - Interior Kitchen</span>
+          </a>
 				</li>
 				<li>
-					<a href="#"><img src="assets/kitchen.jpg" alt=""><span>dining room</span></a>
+					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+            <img src="assets/2_kitchen_2.jpg" alt="" class="gallery-thumbs">
+            <span>Example 2 - Kitchen Nook</span>
+          </a>
 				</li>
 				<li>
-					<a href="#"><img src="assets/lounge.jpg" alt=""><span>lounge</span></a>
+					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+            <img src="assets/conservatory.jpg" alt="" class="gallery-thumbs" >
+            <span>Conservatory</span>
+          </a>
 				</li>
 			</ul>
 		</div>
 	</div>
+
+  <!-- Modal  -->
+  <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" style="text-align:center">
+        <img src="assets/lounge.jpg" alt=""  class="modal-content" style="padding:30px">
+    </div>
+  </div>
