--- a/app/views/enquiry_mailer/customer_enquiry.html.erb
+++ b/app/views/enquiry_mailer/customer_enquiry.html.erb
@@ -1,18 +1,13 @@
-Dear <%= @customer_name.blank? ? 'Customer' : @customer_name %>,
+<h1>New Customer Enquiry</h1>
 
 <p>
-	Thank you for your enquiry. A company representiive is currently dealling with your enquiry and will be in touch with you shortly.
-<p>
-<p>
-	In the meantime may we refer you to our 
-	<%= link_to 'F.A.Q', faq_path %> 
-	section of the Mydesign website. <br />Where you find some anwsers to some of the questions you might have.
+  Customer Name: <%= @customer_name %>
+  <br/>
+  Customer email: <%= @user_email %>
+  <br/>
+  <br/>
+  Message:
+  <br/>
+  <br/>
+  <%= @user_message %>
 </p>
-<br />
-<br />
-<p>
-	Kindest of Regards <br />
-
-	My-Design Team.
-</p>
-
