--- a/app/views/home/gallery.html.erb
+++ b/app/views/home/gallery.html.erb
@@ -3,55 +3,55 @@
 		<div class="content" style="text-align:center">
 			<ul class="gallery">
 				<li>
-					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
-            <img src="assets/1_before.jpg" alt="" height="134" width="194">
+					<a href="#" class='thumb-click'>
+            <img src="assets/1_before.jpg" alt="" class="gallery-thumbs">
             <span>Example 1 - Before</span>
           </a>
 				</li>
 				<li>
-					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+					<a href="#" class='thumb-click'>
             <img src="assets/1_drawing.jpg" alt="" class="gallery-thumbs">
             <span>Example 1 - Plans</span>
           </a>
 				</li>
 				<li>
-					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+					<a href="#" class='thumb-click'>
             <img src="assets/1_after.jpg" alt="" class="gallery-thumbs">
             <span>Example 1 - After</span>
           </a>
 				</li>
 				<li>
-					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+					<a href="#" class='thumb-click'>
             <img src="assets/2_before.jpg" alt=""  class="gallery-thumbs">
             <span>Example 2 - Before</span>
           </a>
 				</li>
 				<li>
-					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+					<a href="#" class='thumb-click'>
             <img src="assets/2_drawing.jpg" alt=""  class="gallery-thumbs">
             <span>Example 2 - Plans</span>
           </a>
 				</li>
 				<li>
-					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+					<a href="#" class='thumb-click'>
             <img src="assets/2_after.jpg" alt="" class="gallery-thumbs" >
             <span>Example 2 - After</span>
           </a>
 				</li>
 				<li>
-					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+					<a href="#" class='thumb-click'>
             <img src="assets/2_kitchen.jpg" alt="" class="gallery-thumbs">
             <span>Example 2 - Interior Kitchen</span>
           </a>
 				</li>
 				<li>
-					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+					<a href="#" class='thumb-click'>
             <img src="assets/2_kitchen_2.jpg" alt="" class="gallery-thumbs">
             <span>Example 2 - Kitchen Nook</span>
           </a>
 				</li>
 				<li>
-					<a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">
+					<a href="#" class='thumb-click'>
             <img src="assets/conservatory.jpg" alt="" class="gallery-thumbs" >
             <span>Conservatory</span>
           </a>
@@ -61,8 +61,8 @@
 	</div>
 
   <!-- Modal  -->
-  <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div id="yll" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" style="text-align:center">
-        <img src="assets/lounge.jpg" alt=""  class="modal-content" style="padding:30px">
+        <img src="assets/lounge.jpg" id="modal-image" alt="" height="85%" width="85%"  class="modal-content" style="padding:30px">
     </div>
   </div>
